# UmpCast

./: .gitignore  LICENSE  README.md  UmpCast.code-workspace  docker-compose.override.yml  docker-compose.yml
.github/: CODEOWNERS  cspell.json  dependabot.yml  pull_request_template.md
client/: .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  .graphqlrc.yml  .lintstagedrc.js  .lintstagedrc.json  .prettierignore  .prettierrc  .prettierrc.json  App.tsx  apollo.config.js  app.build.json  app.config.js  app.config.ts  app.json  babel.config.js  codegen.yml  (+11 more)
infra/cdk/dionysus/: README.rst  cdk8s.yaml  pyproject.toml
infra/cdk/dionysus/dionysus/: service.py
infra/cdk/dionysus/dionysus/imports/k8s/_jsii/: k8s@0.0.0.jsii.tgz
infra/cdk/dionysus/tests/: test_dionysus.py
server/organizations/: app.py  docker-compose.yml  inputs.py  models.py  pyproject.toml  resolvers.py  schema.graphql  utils.py
server/permits/: Dockerfile  app.py  docker-compose.yml  inputs.py  models.py  pyproject.toml  resolvers.py  schema.graphql
server/users/: app.py  docker-compose.yml  inputs.py  models.py  pyproject.toml  resolvers.py  schema.graphql
server/users/admin/: __init__.py  user_profile.py
server/users/graphql/: schema.graphql
server/users/graphql/resolvers/: __init__.py  query.py  user.py
server/users/migrations/: 0001_initial.py  0002_userprofile.py
server/users/models/: __init__.py  user.py  user_profile.py
server/users/services/: __init__.py  permissions.py  service.py  user.py  user_input.py  user_permission.py
server/users/tests/models/: test_user.py  test_user_profile.py
server/users/tests/services/: test_permissions.py  test_service.py  test_user.py  test_user_input.py  test_user_service.py
(+2599 files in other folders)
